# Bulk-AI-Image-Classification-Tool

./: CheckListWidget.py  LICENSE  README.md  TupleCheckListWidget.py  action_box.py  actions.py  data.py  exif_actions.py  gui.py  load_actions.py  main.py  predict_all.py  pyproject.toml  requirements.txt  test_data.py
models/: put your models here.txt
src/commands/: exif_actions.py  load_actions.py  predict_all.py
src/gui/: CheckListWidget.py  action_box.py  dark_palette.py  file_manager.py  image_tagger.py  main_widget.py  main_window.py
tests/: test_commands.py  test_data.py  test_main.py  test_ui_actions.py
